overflow issue

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,7 @@ header {
   height: 100vh;
   color: #fff;
   position: relative;
+  overflow: hidden;
 }
 
 header.tmpheader {
